2019-1/220/users/4266/executions/1597_1016.log
== TEST (2019-04-02 08:54:24) 
-- CODE:
a = float(input ("Digite o primeiro lado do triangulo: "))
b = float(input ("Digite o segundo lado do triangulo: "))
c = float(input ("Digite o terceiro lado do triangulo: "))
s = (a+b+c)/2
from math import*
area = math.squart(s*(s-a)*(s-b)(s-c))
print(round(area,5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = math.squart(s*(s-a)*(s-b)(s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:54:52) 
-- CODE:
a = float(input ("Digite o primeiro lado do triangulo: "))
b = float(input ("Digite o segundo lado do triangulo: "))
c = float(input ("Digite o terceiro lado do triangulo: "))
s = (a+b+c)/2
math import
area = math.squart(s*(s-a)*(s-b)(s-c))
print(round(area,5))

-- ERROR:
File "XXXX", line 5
    math import
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:55:03) 
-- CODE:
a = float(input ("Digite o primeiro lado do triangulo: "))
b = float(input ("Digite o segundo lado do triangulo: "))
c = float(input ("Digite o terceiro lado do triangulo: "))
s = (a+b+c)/2
math import
area = math.squart(s*(s-a)*(s-b)(s-c))
print(round(area,5))

-- ERROR:
File "XXXX", line 5
    math import
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:55:21) 
-- CODE:
a = float(input ("Digite o primeiro lado do triangulo: "))
b = float(input ("Digite o segundo lado do triangulo: "))
c = float(input ("Digite o terceiro lado do triangulo: "))
s = (a+b+c)/2
import math
area = math.squart(s*(s-a)*(s-b)(s-c))
print(round(area,5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = math.squart(s*(s-a)*(s-b)(s-c))
AttributeError: module 'math' has no attribute 'squart'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:55:46) 
-- CODE:
a = float(input ("Digite o primeiro lado do triangulo: "))
b = float(input ("Digite o segundo lado do triangulo: "))
c = float(input ("Digite o terceiro lado do triangulo: "))
s = (a+b+c)/2
import math
area = math.sqrt(s*(s-a)*(s-b)(s-c))
print(round(area,5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = math.sqrt(s*(s-a)*(s-b)(s-c))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 08:57:26) 
-- CODE:
import math
a = float(input ("Digite o primeiro lado do triangulo: "))
b = float(input ("Digite o segundo lado do triangulo: "))
c = float(input ("Digite o terceiro lado do triangulo: "))
s = (a+b+c)/2

area = math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:57:42) 
-- CODE:
import math
a = float(input ("Digite o primeiro lado do triangulo: "))
b = float(input ("Digite o segundo lado do triangulo: "))
c = float(input ("Digite o terceiro lado do triangulo: "))
s = (a+b+c)/2

area = math.sqrt(s*(s-a)*(s-b)*(s-c))
print(round(area,5))

-- EXECUTION TIME:
0.13611
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
